qaq/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  type: ClusterIP
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: 3306
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mysql-svc
subsets:
  - addresses:
      - ip: 127.0.0.1
    ports:
      - name: mysql
        port: 3306
        protocol: TCP
