qaq/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-body-size: 4096m
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /
            backend:
              service:
                name: uniauth-web
                port:
                  number: 80
          - pathType: ImplementationSpecific
            path: /api/
            backend:
              service:
                name: gateway-api
                port:
                  number: 80
          - pathType: ImplementationSpecific
            path: /web/
            backend:
              service:
                name: uniauth-api
                port:
                  number: 80
          - pathType: ImplementationSpecific
            path: /docs
            backend:
              service:
                name: docs
                port:
                  number: 80
